Modfified for Ateleris

--- a/app/frontend/Components/Loading.razor
+++ b/app/frontend/Components/Loading.razor
@@ -1,7 +1,7 @@
-﻿<MudText Typo="Typo.h5" Color="Color.Secondary" Class="pb-2">
+﻿<MudText Typo="Typo.h5" Color="Color.Primary" Class="pb-2">
     @BusyMessage
 </MudText>
-<MudProgressCircular Color="Color.Secondary" Indeterminate="true" Class="pb-4" />
+    <MudProgressCircular Color="Color.Primary" Indeterminate="true" Class="pb-4" />
 
 @code {
     [Parameter]
