--- a/app/frontend/Pages/Index.razor
+++ b/app/frontend/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/old-index"
 
 <PageTitle>Home</PageTitle>
 
@@ -11,12 +11,12 @@
         </CardHeaderAvatar>
         <CardHeaderContent>
             <MudText Typo="Typo.h5">
-                <MudLink Href="https://www.nuget.org/packages/Azure.AI.OpenAI" Color="Color.Secondary" 
+                <MudLink Href="https://ateleris.ch" Color="Color.Secondary" 
                          Target="_blank" aria-label="The official Azure.AI.OpenAI .NET NuGet link.">
-                    Azure.AI.OpenAI 📦
+                    Ateleris
                 </MudLink>
             </MudText>
-            <MudText Typo="Typo.h6">Blazor 💜 OpenAI</MudText>
+            <MudText Typo="Typo.h6">LexCognita ⚖️</MudText>
         </CardHeaderContent>
     </MudCardHeader>
     <MudCardContent>
