--- a/app/frontend/Components/Examples.razor
+++ b/app/frontend/Components/Examples.razor
@@ -6,7 +6,7 @@
     <MudItem xs="12">
         <MudText Typo="Typo.h2" Align="Align.Center">@Message</MudText>
     </MudItem>
-    <MudItem lg="3" xs="12">
+    <!--<MudItem lg="3" xs="12">
         <MudPaper Elevation="4" Height="12rem" onclick="@(async () => await OnClickedAsync(WhatIsIncluded))"
                   Class="d-flex pa-8 clickable flex-column align-center justify-center mud-width-full rounded dim">
             <MudText Typo="Typo.h5">
@@ -30,4 +30,5 @@
             </MudText>
         </MudPaper>
     </MudItem>
+        -->
 </MudGrid>
