--- a/app/frontend/Shared/MainLayout.razor
+++ b/app/frontend/Shared/MainLayout.razor
@@ -49,7 +49,8 @@
                 <MudImage Src="favicon.png" Class="rounded filter-shadow" Alt="Blazor Logo" Width="30" Height="30" Elevation="0" />
                 <MudSpacer />
                 <MudText Typo="Typo.h5" Color=Color.Surface>
-                    LexCognita
+                    LexCognita <br />
+                    <a href="https://www.ateleris.ch" target="_blank" style="text-decoration: none; font-size: 20px;">by Ateleris GmbH</a>
                 </MudText>
             </MudDrawerHeader>
             <MudDivider Style="flex-grow: 0;" />
