adjusted "by ateleris" link

--- a/app/frontend/Shared/MainLayout.razor
+++ b/app/frontend/Shared/MainLayout.razor
@@ -50,7 +50,7 @@
                 <MudSpacer />
                 <MudText Typo="Typo.h5" Color=Color.Surface>
                     LexCognita <br />
-                    <a href="https://www.ateleris.ch" target="_blank" style="text-decoration: none; font-size: 20px;">by Ateleris GmbH</a>
+                    <a href="https://www.ateleris.ch" target="_blank" style="text-decoration: none; font-size: 16px; margin-right:15px">by Ateleris GmbH</a>
                 </MudText>
             </MudDrawerHeader>
             <MudDivider Style="flex-grow: 0;" />
