--- a/app/SharedWebComponents/Shared/NavMenu.razor
+++ b/app/SharedWebComponents/Shared/NavMenu.razor
@@ -2,20 +2,8 @@
     <MudNavLink Href="" Match="NavLinkMatch.All" aria-label="Chat navigation option." Icon="@Icons.Material.Filled.QuestionAnswer">
         Chat
     </MudNavLink>
-    <!--<MudNavLink Href="voicechat" aria-label="Voice chat navigation option."
-                Icon="@Icons.Material.Filled.VoiceChat">
-        Voice Chat
-    </MudNavLink>
-    -->
-    <!--<MudNavLink Href="documents" aria-label="View (and/or upload) documents."
+    <MudNavLink Href="documents" aria-label="View (and/or upload) documents."
                 Icon="@Icons.Material.Filled.FolderSpecial">
         Documents
     </MudNavLink>
-    -->
-    <!--
-    <MudNavLink Href="chat" aria-label="Chat navigation option."
-                Icon="@Icons.Material.Filled.QuestionAnswer">
-        Chat
-    </MudNavLink>
-    -->
 </MudNavMenu>
